test/fail_compilation/fail334.d

struct S
{
    @property int foo(int a, int b, int c) { return 1; }
}

void main()
{
}
